# bci-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  start.sh  test_api.sh  test_api_docker.sh
.github/workflows/: ci.yml  docker.yml
claude-docs/DOCUMENTATION/: API_IMPLEMENTATION.md  API_SPEC.md  NOTEBOOKS.md
claude-docs/FEEDBACK/: ACTION_PRIORITIES.md  RESUME_BULLETS.md  TECHNICAL_REVIEW.md
claude-docs/FUTURE_FEATURES/: BCI_LSL_HARDWARE.md  BCI_STREAMING.md  DELIVERABLES_SUMMARY.md  PHASE1_RECRUITER_READY.md  PHASE2_BCI_READY.md  PHASE3_IMPRESSIVE_V1.md  ROADMAP_OVERVIEW.md
data/: README.md
frontend/: index.html
frontend/src/: App.jsx  App.module.css  constants.js  index.css
frontend/src/components/: EEGCanvas.jsx  FormPane.module.css  Header.jsx  Header.module.css  JobCard.jsx  JobCard.module.css  PipelineNav.jsx  PipelineNav.module.css  PreprocessPane.jsx  Sidebar.jsx  Sidebar.module.css  StreamPane.jsx  StreamPane.module.css  TrainPane.jsx  UploadPane.jsx  UploadPane.module.css  shared.module.css
frontend/src/components/landing/: APISection.jsx  APISection.module.css  LiveDemoSection.jsx  LiveDemoSection.module.css  ModelMetricsSection.jsx  ModelMetricsSection.module.css  PipelineDiagram.jsx  QuickstartSection.jsx  (+2 more)
frontend/src/pages/: LandingPage.jsx  LandingPage.module.css
notebooks/: 01_preprocessing_demo.ipynb  02_lda_training_demo.ipynb
scripts/: download_sample_data.sh  ws_stream_test.py
src/sleep_bci/: config.py
src/sleep_bci.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sleep_bci/api/: app.py  job_store.py  main.py  schemas.py
src/sleep_bci/features/: bandpower.py
src/sleep_bci/model/: artifacts.py  train.py
src/sleep_bci/preprocessing/: combine.py  core.py  run_preprocess.py
src/sleep_bci/stream/: buffer.py  simulate.py
src/sleep_bci/workers/: settings.py  tasks.py
tests/: conftest.py  test_api.py  test_features.py  test_integration.py  test_preprocessing.py  test_redis.py  test_train.py
(+2 files in other folders)
